# mercator-reporting

./: Dockerfile  README.md  README.md.old  docker-compose.yml  pyproject.toml
docs/: CLAUDE.md  PRD_ANNEXE_A_mapping_mercator.md  PRD_doc.md  PRD_mercator_reporting_v2.md  PRD_mercator_reporting_v3.md  PRD_mercator_reporting_v4.md  SKILLS.md  documentation_tests.md
docs/sources/: dump_standard.json  mercator_backup_dump_v4.py
frontend/: Dockerfile.frontend  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: reports.js
frontend/src/components/: Navbar.jsx  ReportTable.jsx  TemplateCard.jsx
frontend/src/pages/: Dashboard.jsx  QueryBuilder.jsx  ReportView.jsx
src/: config.py  main.py
src/api/routes/: mercator.py  query.py  reports.py
src/core/: dependencies.py  mercator_client.py
src/models/: report.py
src/reporting/: engine.py  filters.py
src/services/: export.py  ollama_service.py  user_templates.py
storage/: user_templates.json
tests/: conftest.py  test_phase1_api.py  test_phase1_mercator_client.py  test_phase2_models.py
